--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sass --watch sass:assets/css"
+    "sass": "sass --watch sass:assets/css"
   },
   "repository": {
     "type": "git",
