--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/alexiGrigorov/OCPR02-ohmyfood/issues"
   },
-  "homepage": "https://github.com/alexiGrigorov/OCPR02-ohmyfood#readme"
+  "homepage": "https://github.com/alexiGrigorov/OCPR02-ohmyfood#readme",
+  "dependencies": {
+    "utopia-core-scss": "^1.0.1"
+  }
 }
